--- a/src/blocks/block-image-carousel/styles/style.scss
+++ b/src/blocks/block-image-carousel/styles/style.scss
@@ -128,10 +128,6 @@
 	position: relative;
 }
 
-.carousel-item {
-	position: static;
-}
-
 .carousel-item .carousel-caption {
 	text-align: left;
 	left: 3%;
